--- a/heavycenter/src/main/res/layout/frag_main_order_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_main_order_detail.xml
@@ -4,6 +4,7 @@
         <variable
             name="frag_main_order_detail"
             type="com.siweisoft.heavycenter.data.netd.order.list.OrdersRes.ResultsBean" />
+        <import type="android.view.View"/>
     </data>
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -21,17 +22,28 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/title"
+            app:txt_mid = "@{frag_main_order_detail.orderNo}"
             app:iv_left ="@drawable/icon_hv_back"
             app:iv_right ="@drawable/icon_hv_scan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+
+        <android.support.constraint.ConstraintLayout
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/top"
+            android:visibility="@{frag_main_order_detail==null?View.GONE:View.VISIBLE}"
+            android:layout_width="0dp"
+            android:layout_height="0dp">
 
 
         <ImageView
             android:clickable="true"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title"
+            app:layout_constraintTop_toTopOf="parent"
             android:background="@drawable/icon_hv_main_order_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -41,7 +53,7 @@
             android:clickable="true"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title"
+           app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/rl_topcontainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -63,7 +75,7 @@
             android:clickable="true"
             android:id="@+id/item_starttime"
             app:txt_left = "开始时间"
-            app:txt_two = ""
+            app:txt_mid = "@{frag_main_order_detail.startTimeCN}"
             app:boo_edit = "false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -72,7 +84,7 @@
             android:clickable="true"
             android:id="@+id/item_endtime"
             app:txt_left = "结束时间"
-            app:txt_mid = "请输入"
+            app:txt_mid = "@{frag_main_order_detail.finishTimeCN}"
             app:boo_edit = "false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -81,6 +93,7 @@
             android:clickable="true"
             android:id="@+id/item_addr"
             app:txt_left = "送货地址"
+            app:txt_mid = "@{frag_main_order_detail.address}"
             app:boo_edit = "false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -89,7 +102,7 @@
             android:clickable="true"
             android:id="@+id/item_plantime"
             app:txt_left = "计划开始时间"
-            app:txt_mid = "请输入"
+            app:txt_mid = "@{frag_main_order_detail.planTimeCNNOApp}"
             app:boo_edit = "false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -98,7 +111,7 @@
             android:clickable="true"
             android:id="@+id/item_rule"
             app:txt_left = "备用签收规则"
-            app:txt_mid = "请输入"
+            app:txt_mid = "@{frag_main_order_detail.signRule}"
             app:boo_edit = "false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -125,6 +138,7 @@
             android:layout_height="wrap_content"/>
 
         <ImageView
+            android:scaleType="fitEnd"
             android:layout_marginTop="3dp"
           app:layout_constraintTop_toTopOf="@+id/item_tip"
             app:layout_constraintRight_toRightOf="parent"
@@ -134,8 +148,8 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:src="@drawable/icon_hv_local"
-            android:layout_width="40dp"
-            android:layout_height="40dp" />
+            android:layout_width="80dp"
+            android:layout_height="35dp" />
 
         <android.support.v7.widget.RecyclerView
             android:clickable="true"
@@ -150,6 +164,8 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/item_tip" />
+
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
