--- a/heavycenter/src/main/res/layout/item_main_order_begin.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_begin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -7,6 +7,8 @@
                 type="com.siweisoft.heavycenter.data.netd.order.list.OrdersRes.ResultsBean" />
 
         <import type="com.android.lib.util.data.DateFormatUtil"/>
+        <import type="com.android.lib.util.StringUtil"/>
+        <import type="android.view.View" />
     </data>
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -23,6 +25,7 @@
         >
 
         <TextView
+            tools:text="混凝土"
             android:includeFontPadding="false"
             android:id="@+id/tv_productName"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -35,6 +38,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            tools:text="c300"
             android:includeFontPadding="false"
             app:layout_constraintLeft_toRightOf="@+id/tv_productName"
             app:layout_constraintBottom_toBottomOf="@+id/tv_productName"
@@ -46,6 +50,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            tools:text="1"
+            android:paddingLeft="1dp"
+            android:paddingRight="1dp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="@+id/tv_productName"
             android:id="@+id/tv_planmun"
@@ -58,23 +65,26 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            tools:text="来自"
             android:background="@{item_main_order_begin.sendType?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
             android:padding="1dp"
-            android:includeFontPadding="false"
+            android:includeFontPadding="true"
             android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@+id/tv_productName"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBaseline_toBaselineOf="@+id/tv_duimian"
             android:id="@+id/tv_type"
             android:layout_gravity="bottom"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:singleLine="true"
             android:textColor="@color/black"
-            android:textSize="14sp"
+            android:textSize="13sp"
             android:text="@{item_main_order_begin.type}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
-            android:layout_marginTop="13dp"
+            tools:text="王尼玛"
+            android:layout_marginTop="14dp"
             android:includeFontPadding="false"
            app:layout_constraintLeft_toRightOf="@+id/tv_type"
             app:layout_constraintTop_toBottomOf="@+id/tv_productName"
@@ -90,7 +100,7 @@
 
 
         <TextView
-
+           
             android:includeFontPadding="false"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="@+id/tv_duimian"
@@ -98,6 +108,8 @@
             android:layout_gravity="right|center_vertical"
             android:gravity="bottom|right"
             android:singleLine="true"
+            android:visibility="@{item_main_order_begin.isShowBtn(item_main_order_begin)? View.GONE:View.VISIBLE}"
+            android:text="@{item_main_order_begin.planTimeCN}"
             android:textColor="@color/color_hv_txt_dark"
             android:textSize="@dimen/dimen_recylce_item_date_txtsize"
             android:layout_width="wrap_content"
@@ -114,7 +126,7 @@
             android:singleLine="true"
             android:layout_marginLeft="10dp"
             android:textSize="15sp"
-            android:visibility="visible"
+            android:visibility="@{item_main_order_begin.isShowBtn(item_main_order_begin)? View.VISIBLE:View.GONE}"
             style_common:color_one="@color/color_hv_yelll"
             style_common:stroke="0dp"
             style_common:color_stroke="@color/red"
@@ -143,7 +155,7 @@
             android:singleLine="true"
             android:layout_marginLeft="10dp"
             android:textSize="15sp"
-            android:visibility="visible"
+            android:visibility="@{item_main_order_begin.isShowBtn(item_main_order_begin)? View.VISIBLE:View.GONE}"
             style_common:color_one="@color/color_hv_yelll"
             style_common:stroke="0dp"
             style_common:color_stroke="@color/red"
