--- a/heavycenter/src/main/res/layout/item_main_order_detail_done.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_detail_done.xml
@@ -45,6 +45,8 @@
 
 
             <TextView
+                android:padding="1dp"
+                android:text="@{item_main_order_detail_done.type}"
                 android:layout_marginTop="7dp"
                 android:includeFontPadding="false"
                 app:layout_constraintTop_toBottomOf="@+id/tv_goodname"
@@ -52,11 +54,12 @@
                 android:id="@+id/tv_type"
                 android:background="@{item_main_order_detail_done.sendType?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
                 android:singleLine="true"
-                android:textColor="@color/white"
-                android:textSize="14sp"
+                android:textColor="@color/black"
+                android:textSize="13sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:text="@{item_main_order_detail_done.accessComName}"
                 android:layout_marginTop="3dp"
                 app:layout_constraintLeft_toRightOf="@+id/tv_type"
                 app:layout_constraintTop_toBottomOf="@+id/tv_goodname"
