--- a/heavycenter/src/main/res/layout/item_main_order_done.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_done.xml
@@ -5,7 +5,7 @@
         <variable
             name="item_main_order_done"
             type="com.siweisoft.heavycenter.data.netd.order.list.OrdersRes.ResultsBean" />
-
+        <import type="android.view.View" />
         <import type="com.android.lib.util.StringUtil"/>
     </data>
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -17,10 +17,12 @@
         android:paddingBottom="10dp"
         android:paddingRight="10dp"
         android:paddingTop="10dp"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/ll_doneorder"
         android:transitionName="doingorder">
 
         <TextView
+            tools:text="混凝土"
             android:includeFontPadding="false"
             app:layout_constraintTop_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -33,6 +35,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            tools:text="c000"
             android:includeFontPadding="false"
             app:layout_constraintLeft_toRightOf="@+id/tv_goodname"
             android:id="@+id/tv_spes"
@@ -46,19 +49,23 @@
 
 
         <TextView
+            android:padding="1dp"
+            tools:text="来自"
+            android:background="@{item_main_order_done.sendType?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
             android:layout_marginTop="7dp"
             android:includeFontPadding="false"
             app:layout_constraintTop_toBottomOf="@+id/tv_goodname"
             app:layout_constraintLeft_toLeftOf="@+id/tv_goodname"
             android:id="@+id/tv_type"
-            android:background="@drawable/bg_hv_sharp2_blue_solid"
             android:singleLine="true"
-            android:textColor="@color/white"
-            android:textSize="14sp"
+            android:textColor="@color/black"
+            android:textSize="13sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/tv_companyname"
             android:text="@{item_main_order_done.type}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            tools:text="王尼玛"
             android:layout_marginTop="3dp"
             app:layout_constraintLeft_toRightOf="@+id/tv_type"
             app:layout_constraintTop_toBottomOf="@+id/tv_goodname"
@@ -76,29 +83,32 @@
         <LinearLayout
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="@drawable/bg_hv_sharp2_yell_stroke"
+            android:background="@{item_main_order_done.sendType?@drawable/bg_hv_sharp1_yell_stroke:@drawable/bg_hv_sharp1_blue_stroke}"
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
+
+                tools:text="总计:"
                 android:paddingLeft="3dp"
                 android:paddingRight="3dp"
                 android:includeFontPadding="false"
                 android:id="@+id/tv_totalcarnum"
                 android:singleLine="true"
-                android:textColor="@color/color_base_txt_heavycenter_y"
+                android:textColor="@{item_main_order_done.sendType?@color/color_hv_yelll:@color/color_hv_blue}"
                 android:textSize="12sp"
                 android:text="@{item_main_order_done.totalRecordCN}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <TextView
+                tools:text="计划:"
                 android:paddingLeft="3dp"
                 android:paddingRight="3dp"
                 android:includeFontPadding="false"
                 android:id="@+id/tv_plan"
                 android:singleLine="true"
-                android:textColor="@color/color_base_txt_heavycenter_y"
+                android:textColor="@{item_main_order_done.sendType?@color/color_hv_yelll:@color/color_hv_blue}"
                 android:textSize="12sp"
                 android:text="@{item_main_order_done.planNumberCN}"
                 android:layout_width="wrap_content"
@@ -107,6 +117,7 @@
 
 
         <TextView
+            tools:text="实发:"
             android:id="@+id/tv_send"
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@+id/tv_companyname"
@@ -156,6 +167,7 @@
 
 
         <TextView
+            tools:text="盈亏:"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="@+id/tv_send"
             android:layout_gravity="bottom"
